--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -6,7 +6,11 @@
 <body>
     <h1>Hello world</h1>
     <h1>This is second page</h1>
-    {{name}}
-    {{age}}
+    <ul>
+        {%for lead in leads%}
+        <li>{{lead}}</li>
+        {%endfor%}
+    </ul>
+    {{leads}}
 </body>
 </html>
